@@ -692,7 +692,6 @@ str ALARMsleep(void *res, int *secs);
 str ALARMtime(int *res);
 str ALARMtimers(bat *res, bat *actions);
 str ALARMusec(lng *ret);
-str ALGantijoin2(bat *l, bat *r, const bat *lid, const bat *rid);
 str ALGcard(lng *result, const bat *bid);
 str ALGcopy(bat *result, const bat *bid);
 str ALGcount_bat(wrd *result, const bat *bid);
@@ -1954,7 +1953,6 @@ str affectedRowsRef;
 str aggrRef;
 str alarmRef;
 str algebraRef;
-str antijoinRef;
 str appendRef;
 str appendidxRef;
 str arrayRef;
