@@ -102,7 +102,6 @@ str iteratorRef;
 str joinPathRef;
 str jsonRef;
 str joinRef;
-str antijoinRef;
 str bandjoinRef;
 str thetajoinRef;
 str subjoinRef;
@@ -318,7 +317,6 @@ void optimizerInit(void)
 	iteratorRef = putName("iterator",8);
 	joinPathRef = putName("joinPath",8);
 	joinRef = putName("join",4);
-	antijoinRef = putName("antijoin",8);
 	bandjoinRef = putName("bandjoin",8);
 	thetajoinRef = putName("thetajoin",9);
 	subjoinRef = putName("subjoin",7);
