@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algebra.antijoin.  Use algebra.subantijoin or
+  algebra.subthetajoin instead.
+
 * Mon Nov 23 2015 Martin Kersten <mk@cwi.nl>
 - The MAL function 'leftfetchjoin' is renamed to its relational algebra
   version 'projection'
